increase gap and fix centering of menu-nav

--- a/kurs-1/modul-7/download-our-app/css/style.css
+++ b/kurs-1/modul-7/download-our-app/css/style.css
@@ -39,14 +39,11 @@ body {
 
 .navigation ul {
     display: flex;
-
+    
     list-style-type: none;
-
     margin: 0;
-    padding: 0;
-
     height: 100%;
-    gap: 30px;
+    gap: 55px;
 }
 
 .navigation__item {
